@@ -1,0 +1,15 @@
+<!doctype html>
+<html>
+<body>
+
+<!--
+This test requires TestNetscapePlugin, so it only runs in DumpRenderTree or if
+the plugin is installed in your browser (unlikely if you didn't install it).
+
+It passes if the iframe below shows a dark grey rectangle.
+-->
+
+<iframe frameborder="0" type="application/x-webkit-test-netscape" src="data:application/x-webkit-test-netscape,test,bgcolorPaintTest"></iframe>
+
+</body>
+</html>
