@@ -1,3 +1,13 @@
+2011-10-10  Nico Weber  <thakis@chromium.org>
+
+        PluginDocumentParser uses incorrect syntax for background color
+        https://bugs.webkit.org/show_bug.cgi?id=69694
+
+        Reviewed by Adam Barth.
+
+        * html/PluginDocument.cpp:
+        (WebCore::PluginDocumentParser::createDocumentStructure):
+
 2011-10-10  Ryosuke Niwa  <rniwa@webkit.org>
 
         REGRESSION(r96870): editing/pasteboard/smart-paste-008.html fails on non-Mac
